[package]
name = "trl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
parity-scale-codec = "3.1.5"
ansi_term = "*"

[profile.release]
panic = "abort"
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

# rustup toolchain install nightly
# rustup component add rust-src --toolchain nightly
# rustc -vV --> взять host: x86_64-unknown-linux-gnu
# cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu --release

# Компилируя с Oz вместо O3 ты теряешь в некоторых ситуациях до 25% производительности


